--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "animate.css": "^4.1.1",
         "bootstrap": "^5.3.8",
-        "sweetalert2": "^11.26.17"
+        "sweetalert2": "^11.26.17",
+        "wowjs": "^1.1.3"
     }
 }
